# casperflow_dearimgui

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  conanfile.txt
.cargo/: config
resources/: logical.json
src/: CMakeLists.txt  CasperFlow.cpp  CasperFlow.hpp  lib.rs  library.rs  lowlevel_gui.cpp  lowlevel_gui.hpp  netlist.rs  project.rs  ui_components.cpp  ui_components.hpp  verilog.rs
src/cpp/: CMakeLists.txt  CasperFlow.cpp  CasperFlow.hpp  lowlevel_gui.cpp  lowlevel_gui.hpp  node_style.cpp  node_style.hpp
src/rust/: Cargo.toml  NodeEditor.json  bindings.h  build.rs
src/rust/src/: ffi.rs  lib.rs  verilog.rs
