[package]
name = "cfrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.65"
bimap = "0.6.2"
cxx = "1.0"
generational-arena = "0.2.8"
lazy_static = "1.4.0"

[build-dependencies]
cxx-build = "1.0"

[profile.release-with-debug]
inherits = "release"
debug = true
