[package]
name = "cfrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0"
bimap = "0.6"
cxx = "1.0"
generational-arena = "0.2"
lazy_static = "1.4"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
thiserror = "1.0.37"

[build-dependencies]
cxx-build = "1.0"

[profile.release-with-debug]
inherits = "release"
debug = true
